# go-it-web-hw14-testing-Rest-api

./: .coverage  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
client_rest/: birthday.html  index.html  main.html
client_rest/css/: sign-in.css
client_rest/javascript/: app.js  birthday.js  main.js
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 489140672425_add_users.py  8e6b38ebd287_add_users_roles.py  9c0a717148f6_add_email_verification.py  ad19eb886730_init.py
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16403  16404  16405  16407  16414  16416  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  (+5 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: clients.py  users.py
src/routes/: auth.py  clients.py  users.py
src/services/: auth.py  email.py  generate_password.py  roles.py  upload_avatar.py
src/services/templates/: reset_password_email.html
static/: style.css
templates/: index.html
tests/: conftest.py  test.db  test_main.py  test_routes_auth.py  test_routes_clients.py  test_sevices_generate_password.py  test_unit_repository_clients.py
