[tool.poetry]
name = "fast-api-hw-14"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fast_api_hw"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
jinja2 = "^3.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.2.8"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
redis = "^4.5.5"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
